// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image Image with a preview url 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Image
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Image with a preview url
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <figure
      className="gc-image FigureElement-sc-4pw5w0-0 gTMSVb"
    >
      <div
        className="AspectRatioPlaceholder-sc-1jfhsx0-0 cQFJsV"
      >
        <div
          style={
            Object {
              "paddingBottom": "25%",
            }
          }
        />
        <img
          alt="test"
          className="preview PreviewElement-sc-1t6xf7x-0 iWKQVZ"
          crossOrigin="anonymous"
          src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg"
        />
        <img
          alt="test"
          className="ImageElement-k4q0my-0 cKDwGc"
        />
      </div>
    </figure>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LazyImage
            " Component
          </h2>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Image with figcaption 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Image
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Image with figcaption
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <figure
      className="gc-image FigureElement-sc-4pw5w0-0 gTMSVb"
    >
      <div
        className="AspectRatioPlaceholder-sc-1jfhsx0-0 cQFJsV"
      >
        <div
          style={
            Object {
              "paddingBottom": "25%",
            }
          }
        />
        <img
          alt="test"
          className="preview PreviewElement-sc-1t6xf7x-0 iWKQVZ"
          crossOrigin="anonymous"
          src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg"
        />
        <img
          alt="test"
          className="ImageElement-k4q0my-0 cKDwGc"
        />
      </div>
      <figcaption
        className="FigcaptionElement-t4a8lz-0 jDepkg"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
      </figcaption>
    </figure>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            FigcaptionElement
            " Component
          </h2>
          <small>
            No propTypes defined!
          </small>
        </div>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LazyImage
            " Component
          </h2>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Image with figcaption to the right 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Image
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Image with figcaption to the right
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <figure
      className="gc-image FigureElement-sc-4pw5w0-0 gTMSVb"
    >
      <div
        className="AspectRatioPlaceholder-sc-1jfhsx0-0 cQFJsV"
      >
        <div
          style={
            Object {
              "paddingBottom": "25%",
            }
          }
        />
        <img
          alt="test"
          className="preview PreviewElement-sc-1t6xf7x-0 iWKQVZ"
          crossOrigin="anonymous"
          src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg"
        />
        <img
          alt="test"
          className="ImageElement-k4q0my-0 cKDwGc"
        />
      </div>
      <figcaption
        className="FigcaptionElement-t4a8lz-0 elumHw"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
      </figcaption>
    </figure>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            FigcaptionElement
            " Component
          </h2>
          <small>
            No propTypes defined!
          </small>
        </div>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LazyImage
            " Component
          </h2>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Simple image 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Image
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Simple image
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <figure
      className="gc-image FigureElement-sc-4pw5w0-0 gTMSVb"
    >
      <div
        className="AspectRatioPlaceholder-sc-1jfhsx0-0 cQFJsV"
      >
        <div
          style={
            Object {
              "paddingBottom": "25%",
            }
          }
        />
        <img
          alt="test"
          className="preview PreviewElement-sc-1t6xf7x-0 iWKQVZ"
          crossOrigin="anonymous"
          src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/300x/mountain.jpg"
        />
        <img
          alt="test"
          className="ImageElement-k4q0my-0 cKDwGc"
        />
      </div>
    </figure>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LazyImage
            " Component
          </h2>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
